@@ -1,7 +1,12 @@
 Gaupol 0.10
 ===========
-
- * Test and fix the common error correction task patterns
+ 
+ * Spaces between digits
+    - "January 11 2002."
+    - "Let's watch 8 1/2."
+ * Letters "O" in numbers: "H2O"
+ * Parser._shift_tags: "- <i> Hello.</i>"
+ * Test common error correction task patterns
 
  [W] Add a common error correction task for the text assistant
  [D] Fix default values of two configuration variables
