@@ -8,5 +8,5 @@
   <pattern name="Spaces after ellipses" enabled="true"/>
   <pattern name="Spaces after starting ellipses" enabled="true"/>
   <pattern name="Multiple question- and exclamation marks" enabled="true"/>
-  <pattern name="Periods around question- and exclamation marks" enabled="true"/>
+  <pattern name="Periods after question- and exclamation marks" enabled="true"/>
 </patterns>
